<resources>

    <!-- App name -->
    <string name="app_name" translatable="false">Random User Api</string>

    <!-- Number of users activity strings -->
    <string name="title_select_number_of_users">Introduce la cantidad de usuarios que quieres visualizar.</string>
    <string name="hint_enter_number">Introduce un número.</string>
    <string name="btn_show_users_from_api">Mostrar nuevos usuarios</string>
    <string name="toast_introduce_number_of_users_to_show">Introduce el número de usuarios que quieres visualizar.</string>
    <string name="toast_too_many_users">Introduce hasta un máximo de 50 usuarios.</string>

    <!-- Default cell strings -->
    <string name="cell_number_default">0</string>
    <string name="cell_name_default">Nombre no disponible</string>
    <string name="cell_phone_default">Teléfono no disponible</string>
    <string name="cell_mail_default">Mail no disponible</string>
    <string name="cell_gender_default">Género no disponible</string>

    <!-- Detail strings -->
    <string name="detail_age_default">Edad no disponible</string>
    <string name="detail_age">Edad:</string>
    <string name="detail_birthdate_default">Cumpleaños no disponible</string>
    <string name="detail_birthdate">Cumpleaños:</string>
    <string name="detail_num_address_default">Número dir. no disponible</string>
    <string name="detail_num_address">Número:</string>
    <string name="detail_address_default">Dirección no disponible</string>
    <string name="detail_address">Dirección:</string>
    <string name="detail_nat_default">Nacionalidad no disponible</string>
    <string name="detail_nat">Nacionalidad:</string>
    <string name="detail_mail_default">Mail no disponible</string>
    <string name="detail_mail">Mail:</string>
    <string name="detail_phone_default">Teléfono no disponible</string>
    <string name="detail_phone">Teléfono:</string>
    <string name="detail_name_default">Nombre no disponible</string>
    <string name="detail_name">Nombre:</string>
    <string name="detail_gender_default">Género no disponible</string>
    <string name="detail_gender">Género:</string>

    <!-- Dialog strings -->
    <string name="dialog_title_no_internet">No estás conectado a internet</string>
    <string name="dialog_message_no_internet">Para utilizar esta aplicación necesitas estár conectado a internet. Prueba esta aplicación cuando vuelvas a tener conexión.</string>
    <string name="dialog_understand_button">Entendido</string>

    <!-- Filter options strings -->
    <string name="option_filter_by">Filtrar por:</string>
    <string name="option_all_users">Todos</string>
    <string name="option_male_users">Hombres</string>
    <string name="option_female_users">Mujeres</string>
    <string name="toast_showing_female_users">Mostrando lista de usuarias femeninas.</string>
    <string name="toast_showing_male_users">Mostrando lista de usuarios masculinos.</string>

    <!-- Loading strings -->
    <string name="random_user_list_loading">Un desconocido es un amigo que aún no has conocido.</string>

    <!-- Error strings -->
    <string name="error_in_user_list">Ha ocurrido un error y no se puede mostrar la lista de usuarios.</string>
    <string name="go_back">Ir a la pantalla anterior.</string>
    <string name="toast_not_all_users">No se han obtenido todos los usuarios.</string>
    <string name="btn_show_users_from_database">Mostrar usuarios guardados.</string>
    <string name="no_users_in_database">No hay ningún usuario en la base de datos.</string>
    <string name="toast_showing_not_all_users_recieved">No se han podido conseguir todos los usuarios.</string>

</resources>