<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:longClickable="true">

    <TextView
        android:id="@+id/txt_id_cell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cell_number_default"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_user_cell"
        app:layout_constraintStart_toEndOf="@+id/txt_id_cell"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_name_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/cell_name_default"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_phone_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/cell_phone_default"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_mail_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/cell_mail_default"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_user_cell"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/default_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>