<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.listofusers.listofusersactivity.ListOfUsersActivity">

    <LinearLayout
        android:id="@+id/ll_loading_user_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMiddle"
        tools:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_loading_list"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_list_lottie" />

        <TextView
            android:id="@+id/txt_load_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random_user_list_loading"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="visible"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMiddle"
        tools:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_error"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="@id/ll_error"
            app:layout_constraintStart_toStartOf="@id/ll_error"
            app:layout_constraintTop_toTopOf="@id/ll_error"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/error_lottie" />

        <TextView
            android:id="@+id/txt_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_in_user_list"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottie_error" />

        <Button
            android:id="@+id/btn_error_go_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_error_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_filter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalBottomFilter"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMiddle"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_filter_by"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/options_chip_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/options_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/option_male"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_male_users" />

            <com.google.android.material.chip.Chip
                android:id="@+id/option_female"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_female_users" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/ll_user_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalTopUserList"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_random_user_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="10"
            tools:listitem="@layout/random_user_list_cell" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalTopUserList"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalBottomFilter"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        tools:visibility="visible"/>

    <FrameLayout
        android:id="@+id/frag_user_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMiddle"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottomFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalTopUserList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

</androidx.constraintlayout.widget.ConstraintLayout>